# MAYA

./: .directory  .gitignore  .starweave.yml  001-DOCS.fish  002-ARCH.fish  003-GOALS-1.fish  003-GOALS-2.fish  003-GOALS-3.fish  004-INTEGRATION-1.fish  004-INTEGRATION-2.fish  004-INTEGRATION-3.fish  004-INTEGRATION-4.fish  004-INTEGRATION-5.fish  005-PLANS.fish  006-PROTOCOLS.fish  007-REFERENCE.fish  008-TUTORIALS.fish  009-VISION-1.fish  009-VISION-2.fish  009-VISION-3.fish  009-VISION-4.fish  010-MAYA-DOCUMENTATION.fish  011-DEBUG-1.fish  011-DEBUG-10.fish  011-DEBUG-2.fish  011-DEBUG-3.fish  011-DEBUG-4.fish  011-DEBUG-5.fish  011-DEBUG-6.fish  011-DEBUG-7.fish  011-DEBUG-8.fish  011-DEBUG-9.fish  012-DEBUG-1.fish  012-DEBUG-2.fish  012-DEBUG-3.fish  012-DEBUG-4.fish  012-DEBUG-5.fish  012-DEBUG-6.fish  012-DEBUG-7.fish  012-DEBUG-8.fish  (+76 more)
.github/workflows/: benchmarks.yml
.starweave/: neural  patterns  protocol
ISSUES/: 001-issue.md  002-issue.md  003-issue.md  004-issue.md  005-issue.md  006-issue.md  007-issue.md  008-issue-depth_buffer.md  009-issue-window_resizing.md  010-issue-compilation_errors.md  011-issue.md  012-issue-WINDSURF.md  013-issue-systemd_school.md  013-issue.md  014-issue.md  015-issue-vulkan_widgets.md  016-NEURAL_CORE.md  017-PREDICTIVE_VECTORING.md  017-PROTOTYPE.md  018-PROTOTYPE.md  019-HYPERCUBE.md
bench/: quantum_benchmarks.zig
benches/: README.md  storage_benchmark.rs
benchmark/: README.md  RESULTS.md  parse_benchmark_results.py  parse_results.py  run_benchmarks.py  run_benchmarks.sh
benchmarks/: pattern_evolution_benchmark.zig  quantum_benchmark.zig
config/: learn.yaml
cursor-extension/: maya.wasm  package-lock.json  package.json  tsconfig.json
cursor-extension/src/: extension.ts
data/learn/: patterns.json
docs/: BEYOND_the_SINGULARITY.md  BRAIN-ENCODING.md  COSMIC-WEAVER.md  GPU_ACCELERATION.md  HIPPOCAMPUS-QUANTUM_COMPILER.md  INTEGRATION.md  META-FUTURE.md  MK-ULTRA  MULTI-VERSE-ENCODING.md  OPTIMIZATION.md  QUANTUM-GRAVITY.md  README.md  SINGULARITY.md  SUBCONCIOUS-REPROGRAMMING.md  advanced_pattern_recognition_plan.md  learning_system_design.md  optimization_roadmap.md  pattern_evolution.md  wasm_build.md
docs/THEORY/: 0-TOPICS.md  2-GEMINI-GLIMMER.md  4-DIMENSIONAL.md  CROSS-REALITY-ENTANGLEMENT.md  CULTURAL-DIFFUSION.md  DARK-MATTER.md  DREAM-SYNTHESIS.md  FIBONACCI-SPIRALS.md  FRACTAL-COMPRESSION.md  FTL.md  GEMINI-GLIMMER.md  HOLOGRAPHIC-PRINCIPLE.md  JAILBREAK.md  (+15 more)
examples/: basic_usage.zig  build.sh  build.zig  build.zig.old  build_memory_management.zig  build_memory_management_direct.zig  build_minimal_vulkan.zig  context.zig  context_final.zig  context_fixed.zig  gpu_evolution.zig  hypercube_example.zig  memory_management.zig  memory_management_debug.zig  memory_management_direct.zig  memory_management_enhanced.zig  memory_management_final.zig  memory_management_final2.zig  memory_management_fixed.zig  memory_management_fixed_ptr.zig  memory_management_minimal.zig  memory_management_new.zig  memory_management_simple.zig  memory_management_working.zig  memory_manager.zig  memory_visualization.zig  minimal_vulkan.zig  neural.zig  pattern_matching_demo.zig  pattern_matching_test.zig  pattern_processor.zig  pattern_recognition.zig  pattern_synthesis.zig  pattern_visualization.zig  predictive_vectoring_demo.zig  quantum_circuit_builder.zig  quantum_processor_demo.zig  quantum_viz_demo.zig  simple_build.zig  simple_pattern_evolution.zig  (+26 more)
maya-llm/: .maya_history  Cargo.toml
maya-llm/src/: console.rs  error.rs  lib.rs  main.rs  memory.rs  pattern.rs  persistence.rs  response.rs
maya-llm/src/commands/: mod.rs
maya-llm/src/console/commands/: memory.rs
maya-llm/src/models/: mod.rs
maya-llm/src/storage/: mod.rs
scripts/: build-windsurf.fish  build.fish  compile_shaders.sh  dump_shader.zig  generate_shaders.sh  generate_shaders.zig  generate_shaders_simple.py  install_maya_learn.sh  maya-learn-ctl.sh  monitor_maya_learn.py  run_benchmarks.sh  run_knowledge_graph_tests.sh  run_load_tests.sh  run_maya_learn.sh  run_performance_tests.sh  run_safe_load_tests.sh  run_zig_benchmarks.sh  setup_arch.sh  test_cuda_integration.zig  test_glimmer_patterns.sh  update_wasm.fish
shaders/: 4d_tensor_operations.comp  4d_tensor_operations.comp.spv  4d_tensor_operations_float.comp  4d_tensor_operations_float.comp.spv  4d_tensor_operations_int.comp  4d_tensor_operations_int.comp.spv  4d_tensor_operations_uint.comp  4d_tensor_operations_uint.comp.spv  advanced_pattern_matching.comp  build.zig  compile_shaders.sh  compile_shaders.zig  generate_includes.sh  pattern_matching.comp  shaders.c  shaders.h  shaders.zig  spiral_convolution.comp.spv  triangle.frag  triangle.vert
src/: build_options.zig  build_options.zig.in  build_options.zig.template  demo.zig  image.zig  main.zig  pattern_gen.zig  pattern_matching_demo.zig  predictive_vectoring_demo.zig  quantum_types.zig  root.zig  wasm.zig
src/knowledge_graph/: Cargo.toml  PERFORMANCE.md  README.md
src/knowledge_graph/benches/: cache_benchmark.rs  compare_storage_engines.rs  hybrid_benchmark.rs  storage_benchmark.rs
src/knowledge_graph/src/: cache.rs  error.rs  graph.rs  lib.rs
src/knowledge_graph/src/models/: edge.rs  mod.rs  node.rs  property.rs
src/knowledge_graph/src/query/: mod.rs
src/knowledge_graph/src/storage/: batch_optimizer.rs  cached_store.rs  cached_store.rs.backup  cached_store.rs.bak  cached_store.rs.orig  cached_store_fixed.rs  hybrid_store.rs  hybrid_store.rs.bak  hybrid_store.rs.orig  mod.rs  prefetch.rs  rocksdb_store.rs  sled_store.rs
src/knowledge_graph/tests/: graph_tests.rs  integration_test.rs  prefetch_test.rs  storage_tests.rs  test_utils.rs
test/: crystal_computing_test.zig  neural_bridge_integration.zig  neural_bridge_minimal.zig  neural_bridge_mocks.zig  neural_bridge_test.zig  pattern_evolution_test.zig  run_integration_tests.zig  run_tests.zig
tests/: generate_performance_report.py  glm_test.zig  pattern_evolution_test.zig  tensor_operations_extended_test.zig  tensor_operations_test.zig  visualize_load_tests.py  vulkan_init_test.zig
(+387 files in other folders)
