@pattern_meta@
GLIMMER Pattern:
{
  "metadata": {
    "timestamp": "2025-06-19 12:15:02",
    "author": "isdood",
    "pattern_version": "1.0.0",
    "color": "#FF69B4"
  },
  "file_info": {
    "path": "./maya-llm/Cargo.toml",
    "type": "toml",
    "hash": "32b31df8b8b628f1edf0d1cd9e70e80029f83c53"
  }
}
@pattern_meta@

[package]
name = "maya-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "3.0"

# Console interface
rustyline = { version = "10.0.0", features = ["with-dirs"] }

# Logging
log = "0.4"
simplelog = { version = "0.12.1", default-features = false, features = ["termcolor"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# Testing
tempfile = "3.2"
