[package]
name = "maya_knowledge_graph"
version = "0.1.0"
edition = "2021"
authors = ["MAYA Team"]
description = "Knowledge graph implementation for MAYA"
license = "MIT"

[dependencies]
sled = { version = "0.34.7", features = ["compression"] }
tempfile = "3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_assertions = "1.0"
rand = "0.8"
futures = "0.3"
anyhow = "1.0"
lru = "0.10.0"
bincode = "1.3"

[dev-dependencies]
serial_test = "2.0"
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.3"
tempfile = "3.3"

[features]
default = []

[lib]
name = "maya_knowledge_graph"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[[test]]
name = "graph"
path = "tests/graph_tests.rs"

[[test]]
name = "storage"
path = "tests/storage_tests.rs"

[[bench]]
name = "storage_benchmark"
path = "benches/storage_benchmark.rs"
harness = false

[[bench]]
name = "cache_benchmark"
path = "benches/cache_benchmark.rs"
harness = false
